@@ -10,22 +10,23 @@ AUX pycairo-1.8.8-svg_check.patch 3009 RMD160 5335b1dd097022bae1fcb1eb1c3bc3e070
 DIST py2cairo-1.10.0.tar.bz2 402070 RMD160 ce75db9af32ef1a3e90f6aaa649cbb2493a941a4 SHA1 2efa8dfafbd6b8e492adaab07231556fec52d6eb SHA256 d30439f06c2ec1a39e27464c6c828b6eface3b22ee17b2de05dc409e429a7431
 DIST pycairo-1.10.0.tar.bz2 246556 RMD160 7d1c1c05113e5bbad32dbe96c65c918b170cac33 SHA1 b4283aa1cc9aafd12fd72ad371303a486da1d014 SHA256 9aa4078e7eb5be583aeabbe8d87172797717f95e8c4338f0d4a17b683a7253be
 EBUILD pycairo-1.10.0-r1.ebuild 4829 RMD160 606bc6ab8a562aaf47ef0b6c096e49baf1debbcb SHA1 cd5bfc4b73e3022cf0888002282f83088f05bfb7 SHA256 92200fd1d826f6e55c4e38ad0dbeeb6db1bc665ab8098bed14c6c27c1a9be999
-MISC ChangeLog 13926 RMD160 5097e6313833237bef43380c7a6340a6f32217a6 SHA1 72c9a7be55f8543d1db399c6e51e112f09fb769e SHA256 7dd8b29546a228c0c17f113ceeede3e341ddd4518295196a48ea842d6b56d918
+EBUILD pycairo-1.10.0-r2.ebuild 4879 RMD160 e770fa74bd433fe24170af93c2bf47355fba666d SHA1 ec9744fc12bceb7821d81717fe7204c762ffead9 SHA256 ab3a6e203ea879d72f47c2522bc60a06034f57acb85611b27c8ab8d772e94c0f
+MISC ChangeLog 14142 RMD160 210c20ab1c3fcd57f293c24a64aff4e30af04f76 SHA1 d450bdd6e7a55f5407e9b421d736b1034657249d SHA256 d73351d8b08e52fba0ca937c04a00e33ce365a9d1d0d87f5ae331b14d280953c
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJN73KZAAoJEHQ6UuhrqBBQ88kQAKrVzdHn3jmVpLZycpc7EyZc
-YYdXhfUM/yN7pPXmSCMrg8K0KxO17hcN3HJiPmVPmDFZt1WBOMD9zqdwKGbtpnSQ
-Yuqv4uCaO76N3jbXz58jbP4OeROVNZuUr2QiIqS2vUKP2wk7ZbtcJx9DtfxWM4Xb
-Tj/Ho27jsTixDBC48ELErwN8JjMbn+srL1YOcv0Ed1dG8DKvIl0UTDlV6OjmA1GH
-akSV2w7pUOYRfZnqsYYEVHpuc0y3hU1w8SWT7q59qcFepkWeCQjYVmMfsDOzs8J7
-qqdj0kYDcihkziTWkC5+cQR+MAF5+0W5/ULbORi+iPTUGmCksNoij3laCgog73at
-9X0g6OusSyWsg51RpswuJG7ZKa9mijeFx5FyxAQUZtsnSZuDsqk8qd/7R6baW+gm
-xb7xfJS9m0aDLJG9AxOi0S26H86GrCckpAU9Z9iX7linnEYV6imIxFgUld9ZaOEe
-0uVxLgRZ98t73M3eySacFwj0v1k1xiB+3SzHs8YoMFYkVLxM8ZxH6kPMx3/miRaO
-cVZB06wxo44nUqQc/iQ2ywzjGAmPB54i/587auzSd5QFTMVFqoW8k4BcKXqxuodo
-yN9T5eeXN4Y3WtfLqoFpzk+N4m1ZZcCKCeX1UAT6b6pjatLksVQttdVZp+Q4q+YI
-5s/d/03P2+NSdHqJlnN3
-=LX1e
+iQIcBAEBCAAGBQJOFl6NAAoJEHQ6UuhrqBBQ44UP/j0JUyR646k0SOFW85I36Z91
+mQDxSb2pAqfcipi4PXn/k8/xkhYiJ2fRdkoNQLVB+cshs+rF3CPGPvEXNc22O2KH
+j8rPFo8bDVbklAmhqC2JAskoIFa3PQyJFvDN/MQF2WEgSneKEHw4OQg92eiD+lWc
+a26GH5U4XawXANQ7ugsFDciQjv2pFC59gYNJcTEyUUAZF3dhxpOPnMy98kW/7dep
+SXSH2Iu8X/aS7F59LuDvKIJakdyz0/2pY4Gaee7EoelvYbfSl8CKga/1t51hIIZL
+w3SR6vJAWFyMYVN2g8IckRk/o941XZDcOq9v/zq2gGr+gD3UFdfMfvQUEUxk2MiU
+STeAabBOo2Kg7GcS9VFjDkffV1z5v0Hg0PPV7lV8NUmAJ2bLDY3K/1uicpEuS3K+
+ZNo0J6+BEH1vgZd1qT2XnzbpLGdYHvG32xyKVQyWCSSqgkIUIwI5zra7kVYd0gZB
+H298wcIdzSAQ3bK3WkYKMkwwAAJtDOcHgTAhTmJS6vZqvivg/BNBqDcjTAn5Bcc/
+LMjI714Gab2DnTLuQtrq15SNGgpfYL+VIaxzMow1JiEzojihEVgCV1sDtvKf932E
+RIW/osYs0DVEm5W2Yi9Zc+H1eiOWqjLYpDYNartBxsCNummQisr7S8+JwrELEkjq
+HlaMpBBceQ3CjEiPg3cc
+=d96L
 -----END PGP SIGNATURE-----
