@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-python/pycairo/ChangeLog,v 1.100 2011/05/08 21:28:41 arfrever Exp $
 
+*pycairo-1.10.0-r2 (08 Jul 2011)
+
+  08 Jul 2011; Nathan Phillip Brink <binki@gentoo.org>
+  +pycairo-1.10.0-r2.ebuild:
+  Bump to pycairo-1.10.0-r2 with respective changes imported from gentoo-x86,
+  reported by ugg.
+
   08 Jun 2011; Nathan Phillip Brink <binki@gentoo.org>
   -pycairo-1.8.10.ebuild, -pycairo-1.10.0.ebuild:
   Drop unfixed versions of pycairo.
